@@ -5,7 +5,7 @@
 #
 # Copyright (C) 2000-2006 Keith Godfrey, Maxym Mykhalchuk, and Henry Pijffers
 #               2007 Didier Briel, Zoltan Bartko, Martin Fleurke
-#               2008 Andrzej Sawula, Alex Buloichik, Didier Briel, Martin Fleurke
+#               2008 Andrzej Sawula, Alex Buloichik, Didier Briel and Martin Fleurke
 #               2009 Didier Briel
 #               Home page: http://www.omegat.org/
 #               Support center: http://groups.yahoo.com/group/OmegaT/
@@ -762,8 +762,10 @@ RBFILTER_FILTER_NAME=Java(TM) Resource Bundles
 RBFH_ERROR_ILLEGAL_U_SEQUENCE=Encountered illegal \\u sequence
 
 # XLIFFFilter.java
-
 XLIFF_FILTER_NAME=XLIFF files
+
+# RESXFilter.java
+RESX_FILTER_NAME=ResX files
 
 # org.omegat.filters3.xml.Handler
 XML_FATAL_ERROR=Error in file {0}, line {1}
